# thick-pointers

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  clang-format.yml
include/: trait.h
src/: main.cpp  rawtraitimplementation.h  thickpointer.h
test/: basic-test.cpp  constructor-test.cpp  owning-test.cpp  performance-test.cpp  rawtraitimplementation.h  test1.cpp
